[gd_scene load_steps=16 format=3]

[ext_resource type="Script" path="res://Scene/OtherScene/ZhenYanCureLevel.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://o3g71a3gsffu" path="res://Scene/OtherScene/zhenyanbutton.tscn" id="2"]
[ext_resource type="Texture2D" uid="uid://cmsx5fc3t0m14" path="res://Art/TwentyEightConstellations/61.png" id="3"]
[ext_resource type="Texture2D" uid="uid://byl135rkrsjue" path="res://Art/TwentyEightConstellations/62.png" id="4"]
[ext_resource type="FontFile" uid="uid://ond0o3n8a00i" path="res://Font/华康宋体W3.ttc" id="5"]
[ext_resource type="Texture2D" uid="uid://dpajd82majw18" path="res://Art/TwentyEightConstellations/63.png" id="6"]
[ext_resource type="Texture2D" uid="uid://cybrlei844jq8" path="res://Art/TwentyEightConstellations/64.png" id="7"]
[ext_resource type="FontFile" uid="uid://mq0cfa3t1vbr" path="res://Font/8_FZCuYuan-M03S.ttf" id="8"]
[ext_resource type="Texture2D" uid="uid://c0agd6houi3b4" path="res://Art/TwentyEightConstellations/66.png" id="9"]
[ext_resource type="Texture2D" uid="uid://cttnoilo6uefb" path="res://Art/TwentyEightConstellations/65.png" id="10"]

[sub_resource type="StyleBoxEmpty" id="1"]
script = null

[sub_resource type="StyleBoxEmpty" id="2"]
script = null

[sub_resource type="StyleBoxEmpty" id="3"]
script = null

[sub_resource type="StyleBoxEmpty" id="4"]
script = null

[sub_resource type="StyleBoxEmpty" id="5"]
script = null

[node name="ZhenYanCureLevel" type="Node2D"]
script = ExtResource( "1" )

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 358.0
offset_bottom = 354.0
color = Color(0, 0, 0, 0)
metadata/_edit_lock_ = true

[node name="UpButton" parent="." instance=ExtResource( "2" )]
offset_left = 137.0
offset_top = 24.0
offset_right = 211.0
offset_bottom = 98.0

[node name="PropInfoBg" type="Sprite2D" parent="."]
position = Vector2(179, 188)
texture = ExtResource( "3" )
metadata/_edit_lock_ = true

[node name="OldPropList" type="VBoxContainer" parent="PropInfoBg"]
offset_left = -154.0
offset_top = -62.0
offset_right = -20.0
offset_bottom = 61.0
theme_override_constants/separation = 20
metadata/_edit_lock_ = true

[node name="Texture_old" type="TextureRect" parent="PropInfoBg/OldPropList"]
layout_mode = 2
texture = ExtResource( "4" )
stretch_mode = 2

[node name="LevelInfo_old" type="Label" parent="PropInfoBg/OldPropList"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 1
theme_override_constants/shadow_outline_size = 7
theme_override_fonts/font = ExtResource( "5" )
horizontal_alignment = 1
vertical_alignment = 1

[node name="PropInfo_old" type="Label" parent="PropInfoBg/OldPropList"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.4, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0.4, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 1
theme_override_constants/shadow_outline_size = 7
theme_override_fonts/font = ExtResource( "5" )
horizontal_alignment = 1
vertical_alignment = 1

[node name="NewPropList" type="VBoxContainer" parent="PropInfoBg"]
offset_left = 16.0
offset_top = -62.0
offset_right = 150.0
offset_bottom = 61.0
theme_override_constants/separation = 20
metadata/_edit_lock_ = true

[node name="Texture_new" type="TextureRect" parent="PropInfoBg/NewPropList"]
layout_mode = 2
texture = ExtResource( "6" )
stretch_mode = 2

[node name="LevelInfo_new" type="Label" parent="PropInfoBg/NewPropList"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 1
theme_override_constants/shadow_outline_size = 7
theme_override_fonts/font = ExtResource( "5" )
horizontal_alignment = 1
vertical_alignment = 1

[node name="PropInfo_new" type="Label" parent="PropInfoBg/NewPropList"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.4, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0.4, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 1
theme_override_constants/shadow_outline_size = 7
theme_override_fonts/font = ExtResource( "5" )
horizontal_alignment = 1
vertical_alignment = 1

[node name="64" type="Sprite2D" parent="."]
position = Vector2(176, 201)
texture = ExtResource( "7" )
metadata/_edit_lock_ = true

[node name="DownButton" parent="." instance=ExtResource( "2" )]
offset_left = 52.0
offset_top = 255.0
offset_right = 126.0
offset_bottom = 329.0

[node name="Title" type="Label" parent="DownButton"]
layout_mode = 0
offset_left = 75.0
offset_top = 24.0
offset_right = 123.0
offset_bottom = 49.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 1
theme_override_constants/shadow_outline_size = 7
theme_override_fonts/font = ExtResource( "5" )
text = "所需："
metadata/_edit_lock_ = true

[node name="NeedNum" type="Label" parent="DownButton/Title"]
layout_mode = 0
offset_left = 1.0
offset_top = 22.0
offset_right = 77.0
offset_bottom = 43.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource( "8" )
metadata/_edit_lock_ = true

[node name="CureLevel" type="Button" parent="."]
offset_left = 206.0
offset_top = 255.0
offset_right = 340.0
offset_bottom = 322.0
theme_override_styles/normal = SubResource( "1" )
theme_override_styles/hover = SubResource( "2" )
theme_override_styles/pressed = SubResource( "3" )
theme_override_styles/disabled = SubResource( "4" )
theme_override_styles/focus = SubResource( "5" )
icon = ExtResource( "9" )
metadata/_edit_lock_ = true

[node name="lh" type="Sprite2D" parent="."]
position = Vector2(273, 335)
texture = ExtResource( "10" )
metadata/_edit_lock_ = true

[node name="needlh" type="Label" parent="lh"]
offset_left = -52.0
offset_top = -10.0
offset_right = 51.0
offset_bottom = 15.0
theme_override_fonts/font = ExtResource( "8" )
theme_override_font_sizes/font_size = 14
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[connection signal="pressed" from="CureLevel" to="." method="_on_cure_level_pressed" flags=18]
